--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "boxus-website",
   "version": "0.0.0",
   "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
+    "dev": "ng serve",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
